finished with users

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -170,6 +170,11 @@ body {
     font-size: 18px;
     color: #167ac6;
 }
+
+.navbar-custom-menu {
+    margin-right: 20px;
+}
+
 .greenBtn {
     border-radius: 0;
     -webkit-box-shadow: none;
@@ -286,6 +291,18 @@ body {
     background-color: #fff;
 }
 
+.user-header>p {
+    z-index: 5;
+    color: #fff;
+    color: rgba(255,255,255,0.8);
+    font-size: 17px;
+    margin-top: 10px;
+}
+
+.user-header>img {
+    margin-left: 10px;
+}
+
 .devices-tab h2 {
     font-size: 20px;
     margin-bottom: 10px;
@@ -350,6 +367,8 @@ body {
     border-color: #dd4b39;
     box-shadow: none;
 }
+
+
 
 /* ==================== END ==================== */
 
