--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/header %>
+<% include ../partials/authHeader %>
 
 <div class="full-body">
     <div class="login-box-body login-box">
