--- a/views/news/show.ejs
+++ b/views/news/show.ejs
@@ -52,8 +52,19 @@
         <section class="content">
 
             <!-- =============================================  Your Page Content Here  ============================================== -->
-
+<div class="row">
         <div class="col-md-9">
+            <div class="box box-purple">
+                        <div class="box-header with-border">
+                            <h3 class="box-title text-center"></h3>
+            
+                            </div>
+                        </div>
+                        <div class="box-body">
+                            
+                            </div>
+                    </div>
+                </div>
         </div>
 
 
@@ -114,6 +125,7 @@
 
             </div>
             <!--Sidebar-->
+      
     </div>
     <!--END All Feeds row-->
 
