--- a/codekeeper.ejs
+++ b/codekeeper.ejs
@@ -1,150 +1,21 @@
-<% include ../partials/header %>
-
-<body class="hold-transition skin-purple sidebar-collapse sidebar-mini">
-<div class="wrapper">
-
-    <!-- Main Header -->
-    <header class="main-header">
-
-        <!-- Logo -->
-        <a href="/" class="logo">
-            <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><b>G</b>uru</span>
-            <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><b>GSM </b>Guru</span>
-        </a>
-
-        <!-- Header Navbar -->
-        <nav class="navbar navbar-static-top" role="navigation">
-            <!-- Sidebar toggle button-->
-            <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-                <span class="sr-only">Toggle navigation</span>
-            </a>
-            <!-- Navbar Right Menu -->
-
-        </nav>
-    </header>
-
-    <!-- Left side column. contains the logo and sidebar -->
-    <aside class="main-sidebar">
-
-        <!-- sidebar: style can be found in sidebar.less -->
-        <section class="sidebar">
-            <!-- Sidebar Menu -->
-            <ul class="sidebar-menu">
-                <li class="header">Navigation Bar</li>
-                <!-- Optionally, you can add icons to the links -->
-                <li class="active"><a href="/"><i class="fa fa-home" id="sidebar-icon" aria-hidden="true"></i> <span>საწყისი გვერდი</span></a></li>
-                <li><a href="#"><i class="fa fa-newspaper-o" id="sidebar-icon-news" aria-hidden="true"></i><span>სიახლეები</span></a></li>
-                <li class="treeview">
-                    <a href="/smartphone/android"><i class="fa fa-android" id="sidebar-icon" aria-hidden="true"></i> <span>Android</span>
-                        <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i></span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="/smartphone/android">ინსტრუქციები</a></li>
-                        <li><a href="#">აპლიკაციები</a></li>
-                        <li><a href="#">სიახლე სისტემაზე</a></li>
-                    </ul>
-                </li>
-
-
-                <li class="treeview">
-                    <a href="#"><i class="fa fa-apple" id="sidebar-icon" aria-hidden="true"></i> <span>iPhone</span>
-                        <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i></span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="#">ინსტრუქციები</a></li>
-                        <li><a href="#">აპლიკაციები</a></li>
-                        <li><a href="#">სიახლე სისტემაზე</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <!-- /.sidebar-menu -->
-        </section>
-        <!-- /.sidebar -->
-    </aside>
-
-    <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
-        <!-- Content Header (Page header) -->
-        <section class="content-header">
-
-        </section>
-
-        <!-- Main content -->
-        <section class="content">
-
-            <!-- =============================================  Your Page Content Here  ============================================== -->
-                    <div class="row">
-                        <div class="col-md-2"></div>
-                            <!--new blog-->
-                            <div class="col-md-8">
-                                <div class="box box-green">
-                                    <div class="box-header with-border">
-                                        <h3 class="box-title text-center">ახალი ბლოგის დამატება</h3>
-                                    </div>
-                                    <div class="box-body">
-                                        <form action="/news/uploadBanner" method="POST">
-                                            
-                                            <div class="form-group">
-                                                    <label for="inputBilboard"  class="col-sm-2 control-label">ბილბორდი</label>
-                                                <div class="col-sm-10">
-                                                    <input enctype="multipart/form-data" id="billboardImg" class="form-control" id="inputBilboard" placeholder="Title">
-                                                </div>
-                                            </div>
-                                                
-                                            <div class="form-group">
-                                                <div class="col-sm-offset-2 col-sm-10">
-                                                    <button type="submit" id="billboardBtn" class="btn btn-default pull-right">ატვირთვა</button>
-                                                </div>
-                                            </div>
-                                                  
-                                        </form>
-                                        <span id="responseText"></span>
-                                        <form action="/news/blogPost" method="POST">
-                                            
-                                             <div class="form-group">
-                                                    <label for="inputTitle" class="col-sm-2 control-label">სათაური</label>
-                                                <div class="col-sm-10">
-                                                    <input type="text" name="blogPost[title]" class="form-control" id="inputTitle" placeholder="Title">
-                                                </div>
-                                                <textarea class="form-control" name="blogPost[content]" rows="10"></textarea>
-                                                
-                                                <script>
-                                                    CKEDITOR.replace('blogPost[content]');
-                                                </script>
-                                                
-                                                <div class="form-group">
-                                                <div class="col-sm-offset-2 col-sm-10">
-                                                    <button type="submit" class="btn btn-primary pull-right">დაპოსტვა</button>
-                                                </div>
-                                                </div>
-                                             </div>
-                                            
-                                        </form>    
-                                        
-                                    </div>
-                                </div>
-                            </div>
-                    </div>
-
-
-
-
-
-
-                </div>
-                <!--Sidebar-->
-            </div>
-            <!--END All Feeds row-->
-
-        </section>
-
-        <!-- /.content -->
+<% data.hot.forEach(function( hotNews ) { %>
+<div class="news-item">
+    <a href="/hotNews/<%= hotNews._id %>" class="blog-title">
+        <div class="news-item-media-wrap pull-left">
+            <img src="<%= hotNews.billboard %>">
+        </div>
+        <h3><%= hotNews.title %></h3>
+        <p> <%- hotNews.content.slice(0, 200); %>...</p>
+    </a>
+    <%= hotNews.date.toDateString() %>
+    <div  class="btns-container">
+        <% if(currentUser && currentUser.permission === 'admin') { %>
+        <a href="/news/delete" class="btn btn-danger">Delete</a>
+        <form action="/news/edit" id="edit-form">
+            <button type="submit" class="btn btn-warning">Edit</button>
+        </form>
+        <% } %>
+        <a href="/hotNews/<%= hotNews._id %>" class="greenBtn">მეტი</a>
     </div>
-    <!-- /.content-wrapper -->
-
-
-<% include ../partials/footer %>
+</div>
+<% }) %>
