--- a/views/admin/admin-panel.ejs
+++ b/views/admin/admin-panel.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/header %>
+<% include ../partials/header %>
 
 
     <!-- Left side column. contains the logo and sidebar -->
@@ -53,182 +53,25 @@
         <section class="content">
 
 <!-- =============================================  Your Page Content Here  ============================================== -->
-            <!--filter of videos-->
+            <!--ROW-->
             <div class="row">
-
-                <h3 class="text-center main-info-header">ისწავლე სმარტფონი ჩვენთან ერთად <br>
-                    <span id="loadLater" class="w3-animate-left">ვიდეო </span><span class="w3-animate-right" id="showLater2">ინსტრუქციებით</span> </h3>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <a href="#">
-                    <div class="my-info-box">
-                        <span class="my-info-box-icon bg-red-gradient"><i class="fa fa-exclamation"></i></span>
-                        <div class="info-box-content">
-                            <span class="my-info-box-text">საჭირო ინფო</span>
-                            <span class="my-info-box-number">ზოგადი ინფო ორივე სისტემაზე</span>
-                        </div>
-                    </div>
-                    </a>
-                </div>
-                
-                
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <a href="/smartphones/android">
-                    <div class="my-info-box">
-                        <span class="my-info-box-icon bg-green-gradient"><i class="fa fa-android"></i></span>
-                        <div class="info-box-content">
-                            <span class="my-info-box-text">ანდროიდი</span>
-                            <span class="my-info-box-number">ვიდეოები ბრენდების მიხედვით</span>
-                        </div>
-                    </div>
-                     </a>
-                </div>
-               
-
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <a href="#">
-                    <div class="my-info-box">
-                        <span class="my-info-box-icon bg-black-gradient"><i class="fa fa-apple"></i></span>
-                        <div class="info-box-content">
-                            <span class="my-info-box-text">აიფონი</span>
-                            <span class="my-info-box-number">ვიდეოები iOS-ის შესწავლაზე</span>
-                        </div>
-                    </div>
-                    </a>
-                </div>
-              
-                
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <a href="#">
-                    <div class="my-info-box">
-                        <span class="my-info-box-icon bg-yellow-gradient"><i class="fa fa-gamepad"></i></span>
-                        <div class="info-box-content">
-                            <span class="my-info-box-text">აპების მიმოხილვა</span>
-                            <span class="my-info-box-number">საინტერესო აპების გაცნობა და გამოყენება</span>
-                        </div>
-                    </div>
-                    </a>
-                </div>
-                
-            </div>
-            <!--filter of videos END-->
-
-
-
-
-
-
-     <!--All Feeds row-->
-    <div class="row">
-                <!--Blog feed-->
-                <div class="col-md-9">
-                    <div class="box box-purple">
+                <div class="col-md-12">
+                    <div class="box box-green">
                         <div class="box-header with-border">
-                            <h3 class="box-title">სიახლეები</h3>
+                            <a href="/news/new" class="btn bg-purple margin">ცხელი ამბის დამატება</a>
+                            <a href="/news/new" class="btn bg-orange btn-flat margin">აპლიკაციის დამატება</a>
+                            <a href="/news/new" class="btn bg-olive btn-flat margin">ინსტრუქციის დამატება</a>
+                            <a href="/news/new" class="btn bg-maroon btn-flat margin">აპის განხილვის დამატება</a>
                         </div>
                         <div class="box-body">
-                            <ul class="products-list product-list-in-box">
-                                <% var x = 5 %>
-                                <% for(i = 0; i < x; i++) { %>
-                                <li class="item">
-                                    <div class="blog-image">
-                                        <img src="./dist/static_images/placeholder.jpg" alt="">
-                                    </div>
-                                    <div class="blog-info">
-                                        <a href="#" class="blog-title">ახალი ამბავი</a>
-                                        <span class="blog-description">
-                                            Suspendisse sapien ante, auctor congue maximus vel, fermentum nec eros. Maecenas
-                                            at tellus non justo consequat suscipit. Nulla cursus est vel nibh vestibulum, rhoncus
-                                            Praesent maximus in velit ac congue. Morbi non dictum
-                                            <span class="app-date"><em id="font-size">Date: 27.11.2017</em></span>
-                                        </span>
-                                    </div>
-                                    <a href="#" class="greenBtn">მეტი</a>
-                                </li>
-                                <% } %>
-                            </ul>
-                            <div class="box-footer text-center">
-                          <!--             PAGINATION             -->
-                                <nav aria-label="Page navigation">
-                                    <ul class="pagination">
-                                        <li>
-                                            <a href="#" aria-label="Previous">
-                                                <span aria-hidden="true">&laquo;</span>
-                                            </a>
-                                        </li>
-                                        <li><a href="#">1</a></li>
-                                        <li><a href="#">2</a></li>
-                                        <li><a href="#">3</a></li>
-                                        <li><a href="#">4</a></li>
-                                        <li><a href="#">5</a></li>
-                                        <li>
-                                            <a href="#" aria-label="Next">
-                                                <span aria-hidden="true">&raquo;</span>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </nav><!--PAGINATION END-->
-                            </div>
+
+
                         </div>
                     </div>
                 </div>
-                <!--END Blog Feed-->
-
-                <!--Sidebar-->
-                <div class="col-md-3">
-                    <div class="box box-purple">
-                        <div class="box-header with-border">
-                            <p class="box-title">ახალი ინსტრუქციები<p>
-                        </div>
-                        <div class="box-body">
-                            <ul class="products-list product-list-in-box">
-                                <% var x = 5 %>
-                                <% for(i = 0; i < x; i++){ %>
-                                <li class="item">
-                                    <div class="product-img">
-                                        <img src="/dist/static_images/default-50x50.gif">
-                                    </div>
-                                    <div class="product-info">
-                                        <a href="#" class="newb-title">დავრეგისტრირდეთ Play Market-ზე</a>
-                                        <span class="newb-desc">
-                                            თავად ტკივილი არავის უყვარს, არავინ ეძებს მას და არავის სურს იგი, უბრალოდ იმიტომ, რომ ის ტკივილია...
-                                        </span>
-                                    </div>
-                                </li>
-                                <% } %>
-                            </ul>
-                        </div>
-
-                    </div>
-                    <div class="box box-purple">
-                        <div class="box-header with-border">
-                            <p class="box-title">TOP 5 Apps</p>
-                        </div>
-                        <div class="box-body">
-                            <ul class="products-list product-list-in-box">
-                                <% var x = 5 %>
-                                <% for(i = 0; i < x; i++){ %>
-                                <li class="item">
-                                    <div class="app-img">
-                                        <img src="/dist/static_images/default-50x50.gif">
-                                    </div>
-                                    <div class="app-title">
-                                        <a href="#">Viber 6.6.0.888 (120251)</a>
-                                        <small class="app-date">Date: <em>01.03.2017</em></small>
-                                    </div>
-                                </li>
-                                <% } %>
-                            </ul>
-                        </div>
-                        <div class="box-footer text-center">
-                            <a href="#">ყველა</a>
-                        </div>
-
-                    </div>
-
                 </div>
-                <!--Sidebar-->
-    </div>
-            <!--END All Feeds row-->
+
+            </div> <!--  end of row -->
 
         </section>
 
@@ -237,4 +80,4 @@
     <!-- /.content-wrapper -->
 
 
-<% include ./partials/footer %>
+<% include ../partials/footer %>
