--- a/views/admin/admin-panel.ejs
+++ b/views/admin/admin-panel.ejs
@@ -59,9 +59,9 @@
                     <div class="box box-green">
                         <div class="box-header with-border">
                             <a href="/news/new" class="btn bg-purple margin">ცხელი ამბის დამატება</a>
-                            <a href="/news/new" class="btn bg-orange btn-flat margin">აპლიკაციის დამატება</a>
+                            <a href="/app/new" class="btn bg-orange btn-flat margin">აპლიკაციის დამატება</a>
                             <a href="/news/new" class="btn bg-olive btn-flat margin">ინსტრუქციის დამატება</a>
-                            <a href="/news/new" class="btn bg-maroon btn-flat margin">აპის განხილვის დამატება</a>
+                            <a href="/appReview/new" class="btn bg-maroon btn-flat margin">აპის განხილვის დამატება</a>
                         </div>
                         <div class="box-body">
 
