--- a/views/news/show.ejs
+++ b/views/news/show.ejs
@@ -95,7 +95,7 @@
                 </div>
                 <div class="box box-purple">
                     <div class="box-header with-border">
-                        <p class="box-title">TOP 5 Apps</p>
+                        <p class="box-title">TOP 5 აპები</p>
                     </div>
                     <div class="box-body">
                         <ul class="products-list product-list-in-box">
