--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -385,6 +385,20 @@ body {
     padding:15px;
     background-color: #fbfbfb;
     box-shadow: 0 2px 3px #777;
+}
+
+.with-shadow {
+    -webkit-box-shadow: -1px 4px 13px 6px rgba(161,161,161,0.48);
+    -moz-box-shadow: -1px 4px 13px 6px rgba(161,161,161,0.48);
+    box-shadow: -1px 4px 13px 6px rgba(161,161,161,0.48);
+}
+
+.my-box-title {
+    display: inline-block;
+    font-size: 24px;
+    margin: 0;
+    line-height: 1;
+    color: rebeccapurple;
 
 }
 
@@ -402,7 +416,8 @@ body {
     padding: 0 10px;
     width: 100%;
     min-width: 541px;
-    height: 186px;
+    height: 188px;
+    box-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 
 .news-item>a {
@@ -423,7 +438,7 @@ body {
 }
 
 .news-item img {
-    margin: -3px 0 0 0;
+    margin: 0;
     max-width: 100%;
 }
 
@@ -431,13 +446,12 @@ body {
     font-weight: 700;
     text-transform: uppercase;
     color: #c0c0c0;
-    font-size: 10px;
+    font-size: 12px;
     padding: 0 0 6px;
     text-align: right;
     position: absolute;
     bottom: -4px;
     right: 5px;
-
     margin-bottom: 0;
     z-index: 3;
     float: right;
@@ -448,9 +462,16 @@ body {
     margin-top: 20px;
     font-size: 12px;
 }
-.news-title h4:hover {
+
+.news-title h4 {
     color: rebeccapurple;
-    text-shadow: 0 2px 3px rgba(255, 255, 255, 0.4);
+}
+.news-title h4:hover {
+    transition-duration: 0.2s;
+    text-shadow: 0 4px 3px rgba(0,0,0,.5);
 }
 
+.minimum-width {
+    min-width: 980px;
+}
 /* ==================== END ==================== */
