--- a/views/news/show.ejs
+++ b/views/news/show.ejs
@@ -55,8 +55,8 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="box box-purple">
-                    <div class="box-header with-border">
-                        <h3 class="box-title text-center"><%= post.title %></h3>
+                    <div class="box-header with-border with-shadow">
+                        <h3 class="my-box-title text-center"><%= post.title %></h3>
                      </div>
                 </div>
                    <div class="my-box-body">
